// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components / Cover shall vm.style output image-set with 1 image 1`] = `
Object {
  "backgroundImage": "-webkit-image-set(url(\\"/images/post.test-post.1x.jpg\\") 1x)",
}
`;

exports[`Components / Cover shall vm.style output image-set with 2 image 1`] = `
Object {
  "backgroundImage": "-webkit-image-set(url(\\"/images/post.test-post.1x.jpg\\") 1x, url(\\"/images/post.test-post.2x.jpg\\") 2x)",
}
`;
